[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/UI/BattleSelectedAbility.png" type="Texture" id=1]
[ext_resource path="res://Battle/UI/Target.gd" type="Script" id=2]

[node name="Target" type="HBoxContainer"]
margin_right = 107.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
alignment = 1
script = ExtResource( 2 )

[node name="Pointer" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 4.0
margin_bottom = 14.0
texture = ExtResource( 1 )

[node name="TargetNameLabel" type="Label" parent="."]
margin_left = 8.0
margin_right = 36.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
text = "Name"
align = 2

[node name="Spacer" type="Label" parent="."]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )

[node name="TargetHPCurrentLabel" type="Label" parent="."]
margin_left = 44.0
margin_right = 68.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "9999"
align = 2

[node name="Slash" type="Label" parent="."]
margin_left = 72.0
margin_right = 79.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "/"

[node name="TargetHPMaxLabel" type="Label" parent="."]
margin_left = 83.0
margin_right = 107.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 14 )
text = "9999"
